<resources>

    <string name="app_name">ChuK.LimE.Act01</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="contact_name">Contact Name:</string>
    <string name="contact_number">Contact Number:</string>
    <string name="contact_email">Contact Email:</string>
    <string name="save_changes">Save Changes</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_contacts">ContactsActivity</string>
    <string name="no_contacts">No Contacts Found</string>
    <string name="contacts_activity">Contacts</string>

</resources>